--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-toastify": "^9.1.3",
+    "sqlite3": "^5.1.6",
     "tailwindcss": "3.3.3",
+    "typeorm": "^0.3.17",
     "typescript": "5.1.6",
     "zod": "^3.22.3",
     "zod-to-json-schema": "^3.21.4"
