--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "format": "prettier --write \"app\""
+    "format": "prettier --write \"app\"",
+    "database": "cp shared/real-estate.db .next/server/app/api/chat/sql_query/real-estate.db"
   },
   "engines": {
     "node": ">=18"
